# NeuroPBR

./: .gitattributes  .gitignore  .gitmodules  README.md  requirements.txt
dataset/: README.md  clean_dataset.py  export_matsynth.py  export_matsynth_gcs.py  process_dataset.py
mobile_app/: README.md  pubspec.yaml
mobile_app/android/app/: build.gradle.kts
mobile_app/assets/env_maps/: brdf_lut.ktx  furry_clouds_8k_irradiance.ktx  large_corridor_8k_irradiance.ktx  sunny_rose_garden_8k_irradiance.ktx  the_sky_is_on_fire_8k_irradiance.ktx
mobile_app/ios/: ImageProcessor.swift  PBRModelHandler.swift  Podfile
mobile_app/ios/CoreML/: README.md
mobile_app/ios/MetalRenderer/: EnvironmentPrefilter.h  EnvironmentPrefilter.metal  EnvironmentPrefilter.mm  MetalBridge.mm  MetalShaders.metal  NeuropbrMetalRendererPlugin.h  NeuropbrRenderer.podspec  README.md  Renderer.cpp  Renderer.hpp
mobile_app/ios/Runner/: AppDelegate.swift  ImageProcessor.swift  Info.plist  PBRModelHandler.swift  Runner-Bridging-Header.h
mobile_app/ios/Runner.xcodeproj/: project.pbxproj
mobile_app/ios/pbr_model.mlpackage/: Manifest.json
mobile_app/lib/: main.dart  neuropbr_plugin.dart  neuropbr_preview_demo.dart
mobile_app/lib/providers/: preferences_provider.dart
mobile_app/lib/screens/: animated_splash_screen.dart  captured_images_screen.dart  carousel_screen.dart  main_tab_screen.dart  material_library_screen.dart  nav_item.dart  renderer_screen.dart  scan_screen.dart  scan_screen_new.dart  settings_screen.dart  start_screen.dart  stats_screen.dart  tags_screen.dart
mobile_app/lib/services/: native_image_processor.dart  pbr_service.dart
mobile_app/lib/theme/: app_theme.dart  (+1 more)
mobile_app/linux/: CMakeLists.txt
mobile_app/neuro_pbr/: README.md  pubspec.yaml
mobile_app/scripts/: generate_env_maps.sh
mobile_app/test/: widget_test.dart
mobile_app/web/: index.html  manifest.json
renderer/: CMakeLists.txt  README.md
renderer/include/: brdf.cuh  io.h  prefilter.cuh  renderer.h  shading.cuh  utils.cuh
renderer/src/: brdf.cu  brdf.cuh  io.cpp  io.h  main.cpp  prefilter.cu  prefilter.cuh  renderer.cpp  shading.cu  utils.cuh
training/: README.md  TRAINING_GUIDE.md  check_data.py  config.py  download_swinir_weights.py  gpu_optimization.py  profiling.py  requirements.txt  requirements_linux.txt  requirements_macos.txt  run_inference.py  teacher_infer.py  test_discriminator.py  train.py  train_config.py  validate_dataset.py
training/configs/: convattn_student.py  fast_iteration.py  high_quality.py  high_res.py  mobilenetv3_1024.py  mobilenetv3_2048.py  mobilenetv3_512.py  normal_focused.py
training/coreml/: converter.py  run_inference.py
training/losses/: losses.py
training/student/: __init__.py  convattn_student.py  run_inference.py  train.py
training/utils/: dataset.py  gpu_optimization.py  metrics.py  visualization.py
(+31 files in other folders)
